--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,72 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  font-family: "Nunito", sans-serif;
 }
+.main {
+  font-size: 25px;
+  font-weight: bold;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  letter-spacing: 3px;
+  width: 250px;
+  text-align: center;
+}
+.navContainer,
+.subNavContainer {
+  display: flex;
+}
+.subNav {
+  font-size: 25px;
+  margin-right: 90px;
+
+  letter-spacing: 2px;
+}
+.subNavContainer {
+  flex-grow: 1;
+  justify-content: flex-end;
+  cursor: pointer;
+}
+.menu {
+  position: absolute;
+  top: -4px;
+  right: 15px;
+  display: none;
+}
+.subNav:hover {
+  background-color: #4b4453;
+  color: white;
+}
+@media (max-width: 700px) {
+  .subNavContainer {
+    display: flex;
+    flex-direction: column;
+    margin-left: 70px;
+    align-items: center;
+
+    margin-top: 10px;
+    padding: 0 20px;
+
+    transition: all 1s ease-in-out;
+
+    justify-content: center;
+  }
+
+  .menu {
+    display: block;
+  }
+  .navContainer {
+    display: flex;
+    flex-direction: column;
+  }
+  .main {
+    width: 100px;
+  }
+}
+@media (max-width: 900px) and (min-width: 701px) {
+  .subNav {
+    margin-right: 30px;
+  }
+  .main {
+    width: 150px;
+  }
 }
